--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <!-- Your code here! -->
   </head>
 
-  <body>
+  <body><href="./style.css></href><00b3e6>
 
-    <div>
+    <div><width>700px</width><margin>auto</margin><font-family>Helvetica Neue</font-family><background>white</background><padding>30px</padding><main-header><font-size>22px</font-size></main-header><perspective-questions><font-style>italic</font-style></perspective-questions> 
       <h1 id='main-header'>How Does Writing CSS Differ From Writing HTML?</h1>
       <p>As we write CSS these are the type of questions we might ask ourselves:</p>
 
@@ -30,8 +30,8 @@
 
       <p>The last few questions deal with structure, hierarchy, and meaning. These are the concerns of the content layer (HTML).</p>
       <p>When we write CSS, we focus on aesthetic and display considerations. When we write HTML, we focus on structure, hierarchy, and meaning.</p>
-    </div>
+      <div><width>700px</width><margin>auto</margin><font-family>Helvetica Neue</font-family><background>white</background><padding>30px</padding><main-header><font-size>22px</font-size></main-header><perspective-questions><font-style>italic</font-style></perspective-questions>
 
-  </body>
+    <href="./style.css></href><00b3e6></body>
 
 </html>
